Fixed issue with buttons slide not able to be pressed due to z-index

--- a/home-page.css
+++ b/home-page.css
@@ -71,10 +71,11 @@ p, h1, h2, h3, h4, h5, h6 {
 
 .nav-section{
 
-    background-color: #0F1011;
-    border-bottom: solid 1px #E87646;
-
+    transition: background-color 0.2s;
+    
 }
+
+
 
 html{
     /* Acts as a scroll */
@@ -122,6 +123,8 @@ html{
     align-items: center;
     height: 56px;
     width: 100%;
+    position: relative;
+    z-index: 1;
 
 }
 
@@ -130,6 +133,12 @@ html{
     justify-content: space-between;
     width: 1440px;
     padding: 0 16px;
+}
+
+.sticky{
+    position: fixed;
+    top: 0;
+    width: 100%;
 }
 
 
@@ -299,6 +308,12 @@ html{
 }
 /* LAYOUT */
 
+.slider-section{
+    position: relative;
+    z-index: 0;
+    bottom: 56px;
+}
+
 .carousel-container{
     width: 100%;
     height: 440px;
@@ -308,8 +323,8 @@ html{
 
 .popular-titles{
     position: absolute;
-    top: 80px;
-    left: 250px
+    top: 60px;
+    left: 252px
     
 }
 
@@ -332,7 +347,8 @@ html{
 
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
+    padding-bottom: 24px;
     
 }
 
@@ -350,6 +366,7 @@ html{
     max-height: 306.797px;
     min-height: 306.797px;
     object-fit: cover;
+    border-radius: 4px;
 }
 
 .description-container{
@@ -392,7 +409,7 @@ html{
     align-items: center;
     gap: 15px;
     position: relative;
-    top: -107px;
+    top: -55px;
     right: 250px;
 }
 
